crates/bevy_ecs_compile_fail_tests/tests/ui/world_query_filter_derive.rs
use bevy_ecs::prelude::*;
use bevy_ecs::query::WorldQueryFilter;

#[derive(Component)]
struct Foo;

#[derive(WorldQueryFilter)]
struct ComponentQuery {
    a: &'static Foo,
}

fn main() {}
